--- a/src/components/AddProject/index.css
+++ b/src/components/AddProject/index.css
@@ -21,7 +21,7 @@
 .input-field {
   font-size: 14px;
   height: 20px;
-  width: 200px;
+  width: 250px;
   border: 1px solid #d7dfe9;
   background-color: white;
   color: #64748b;
@@ -34,7 +34,7 @@
 .description-field {
   font-size: 14px;
   height: 60px;
-  width: 200px;
+  width: 250px;
   border: 1px solid #d7dfe9;
   background-color: white;
   color: #64748b;
@@ -52,4 +52,73 @@
 .add-project-container {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.vector-image {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.vector-logo {
+  width: 900px;
+}
+
+.sampleList-ul {
+  list-style-type: none;
+  width: 95%;
+}
+
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyright-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyright {
+  color: gray;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.icon {
+  margin-right: 10px;
+}
+
+.icons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.hr-line {
+  width: 120px;
+  border-color: #fdc435;
+}
+
+.projects-line {
+  width: 80px;
+  border-color: #fdc435;
+}
+
+@media screen and (max-width: 768px) {
+  .vector-logo {
+    width: 300px;
+  }
+
+  .sampleList-ul {
+    width: 100%;
+  }
 }
